--- a/index.html
+++ b/index.html
@@ -1,216 +1,217 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HORA DA REVISÃO</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-        }
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>HORA DA REVISÃO</title>
 
-        header {
-            background-color: #222;
-            padding: 15px 30px;
-        }
+<style>
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+}
 
-        .menu {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
+/* ===== HEADER / MENU ===== */
+header {
+    background-color: #222;
+    padding: 15px 30px;
+}
 
-        .logo-container {
-            display: flex;
-            align-items: center;
-            gap: 5px;
-        }
+.menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
-        .logo img {
-            height: 40px;
-        }
+.logo-container {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
 
-        .site-name {
-            color: #fff;
-            font-weight: bold;
-            text-decoration: none;
-            font-size: 16px;
-        }
+.logo img {
+    height: 40px;
+}
 
-        .menu ul {
-            list-style: none;
-            display: flex;
-            gap: 20px;
-            margin: 0;
-            padding: 0;
-            align-items: center; /* Alinha itens verticalmente */
-        }
+.site-name {
+    color: #fff;
+    font-weight: bold;
+    text-decoration: none;
+    font-size: 16px;
+}
 
-        .menu ul li a {
-            color: #fff;
-            text-decoration: none;
-            font-weight: bold;
-        }
+.menu ul {
+    list-style: none;
+    display: flex;
+    gap: 20px;
+    margin: 0;
+    padding: 0;
+    align-items: center;
+}
 
-        .menu ul li a:hover,
-        .site-name:hover {
-            color: #9151b2;
-        }
+.menu ul li a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: bold;
+}
 
-        /* Estilo do botão conforme imagem enviada */
-        .btn-contato {
-            background-color: #9151b2; 
-            color: #6b4f24; /* marrom */
-            padding: 8px 16px;
-            border: none;
-            border-radius: 15px;
-            box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.15);
-            font-weight: bold;
-            cursor: pointer;
-            font-size: 14px;
-            transition: background-color 0.3s ease;
-            text-decoration: none;
-            display: inline-block;
-        }
+.menu ul li a:hover,
+.site-name:hover {
+    color: #9151b2;
+}
 
-        .btn-contato:hover {
-            background-color: #00cccc;
-        }
-    </style>
+.btn-contato {
+    background-color: #9151b2;
+    color: #ffffff;
+    padding: 8px 16px;
+    border-radius: 15px;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+/* ===== FRASE SOBRE A IMAGEM ===== */
+.frase-topo {
+    position: absolute;
+    top: 50%;
+    left: 30px;
+    transform: translateY(-50%);
+    color: #9151b2;
+    font-size: 0.9rem;
+    font-weight: bold;
+    background: rgba(255, 255, 255, 0.8);
+    padding: 16px 30px;
+    border-radius: 25px;
+    max-width: 260px;
+}
+
+/* ===== IMAGEM ===== */
+.foto-alunos img {
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+    display: block;
+}
+
+/* ===== RESPONSIVIDADE ===== */
+@media (max-width: 768px) {
+
+    header {
+        padding: 15px;
+    }
+
+    .menu {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 15px;
+    }
+
+    .menu ul {
+        flex-direction: column;
+        width: 100%;
+        gap: 10px;
+    }
+
+    .menu ul li,
+    .menu ul li a,
+    .btn-contato {
+        width: 100%;
+        text-align: center;
+    }
+
+    .frase-topo {
+        position: relative;
+        top: auto;
+        left: auto;
+        transform: none;
+        margin: 20px auto;
+        text-align: center;
+        max-width: 90%;
+    }
+
+    .foto-alunos img {
+        height: auto;
+    }
+
+    h2 {
+        font-size: 2rem !important;
+    }
+}
+</style>
 </head>
+
 <body>
 
 <header>
-    <nav class="menu">
-        <!-- Logo e nome à esquerda -->
-        <div class="logo-container">
-            <div class="logo">
-                <img src="book.png" alt="Logo" />
-            </div>
-            <a href="#" class="site-name">HORA DA REVISÃO</a>
+<nav class="menu">
+    <div class="logo-container">
+        <div class="logo">
+            <img src="book.png" alt="Logo">
         </div>
+        <a href="#" class="site-name">HORA DA REVISÃO</a>
+    </div>
 
-        <!-- Links à direita -->
-        <ul>
-            <li><a href="index.html">Página inicial</a></li>
-            <li><a href="pacotes.html">Pacotes de estudo</a></li>
-            <li><a href="contato.html">Contato</a></li>
-            <a href="contato.html" class="btn-contato">Entre em contato</a>
-        </ul>
-    </nav>
+    <ul>
+        <li><a href="index.html">Página inicial</a></li>
+        <li><a href="pacotes.html">Pacotes de estudo</a></li>
+        <li><a href="contato.html">Contato</a></li>
+        <li><a href="contato.html" class="btn-contato">Entre em contato</a></li>
+    </ul>
+</nav>
 </header>
-<div class="frase-topo" style="
-  position: absolute;
-  top: 50%;
-  left: 30px;          
-  transform: translateY(-50%);
-  color: #9151b2;
-  font-size: 0,8rem;
-  font-weight: bold;
-  background: rgba(255, 255, 255, 0.75);
-  padding: 16px 30px;
-  border-radius: 25px;
-  text-align: left;
-  max-width: 250px;
-">
-  "Transforme conhecimento em poder e poder em resultados."
+
+<div class="frase-topo">
+"Transforme conhecimento em poder e poder em resultados."
 </div>
+
 <section class="foto-alunos">
- <img src="8.jpg" style="width:100%; height:100vh; object-fit:cover; display:block;">
+    <img src="8.jpg" alt="Alunos">
 </section>
 
-<section style="
-  width: 100%;
-  padding: 60px 20px;
-  background-color: #000000; 
-  text-align: center;
-">
-  <h2 style="
-    margin: 0;
-    font-size: 3rem;
-    font-weight: 800;
-    color: #9151b2; /* COR DO TEXTO */
-    font-family: Arial, sans-serif;
-  ">
-    Pacotes de estudo
-  </h2>
+<section style="padding:60px 20px; background:#000; text-align:center;">
+    <h2 style="color:#9151b2; font-size:3rem; margin:0;">Pacotes de estudo</h2>
 </section>
-<section style="
-  width: 100%;
-  padding: 50px 20px;
-  background-color: #ffffff;
-">
 
-  <div style="
-    max-width: 1200px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    gap: 40px;
-    text-align: center;
-  ">
+<section style="padding:50px 20px;">
+<div style="max-width:1200px; margin:auto; display:flex; justify-content:space-around; flex-wrap:wrap; gap:40px; text-align:center;">
 
-    <!-- ITEM 1 -->
-    <div style="width: 150px;">
-      <img src="Redação.gif" style="width:60px;">
-      <p style="margin-top:10px; font-weight: bold;">Correção<br>de<br>redação</p>
+    <div style="width:150px;">
+        <img src="Redação.gif" style="width:60px;">
+        <p><b>Correção<br>de<br>redação</b></p>
     </div>
 
-    <!-- ITEM 2 -->
-    <div style="width: 150px;">
-      <img src="Reforço.gif" style="width:60px;">
-      <p style="margin-top:10px; font-weight: bold;">Aula<br>de<br>reforço</p>
+    <div style="width:150px;">
+        <img src="Reforço.gif" style="width:60px;">
+        <p><b>Aula<br>de<br>reforço</b></p>
     </div>
 
-    <!-- ITEM 3 -->
-    <div style="width: 150px;">
-      <img src="IFRN.gif" style="width:60px;">
-      <p style="margin-top:10px; font-weight: bold;">Preparatório<br>IFRN</p>
+    <div style="width:150px;">
+        <img src="IFRN.gif" style="width:60px;">
+        <p><b>Preparatório<br>IFRN</b></p>
     </div>
 
-    <!-- ITEM 4 -->
-    <div style="width: 150px;">
-      <img src="ENEM.gif" style="width:60px;">
-      <p style="margin-top:10px; font-weight: bold;">Preparatório<br>ENEM</p>
+    <div style="width:150px;">
+        <img src="ENEM.gif" style="width:60px;">
+        <p><b>Preparatório<br>ENEM</b></p>
     </div>
 
-  </div>
+</div>
 </section>
-<section style="
-  width: 100%;
-  padding: 80px 20px;
-  background-color: #000000;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-">
 
-  <a href="contato.html" style="
-    background-color: #00cccc;
-    color: #ffffff;
-    padding: 14px 32px;
-    border-radius: 15px;
-    box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.15);
-    font-weight: bold;
-    font-size: 16px;
-    text-decoration: none;
-    transition: background-color 0.3s ease;
-  ">
-    Entre em contato
-  </a>
+<section style="padding:80px 20px; background:#000; text-align:center;">
+<a href="contato.html" style="
+background:#00cccc;
+color:#fff;
+padding:14px 32px;
+border-radius:15px;
+font-weight:bold;
+text-decoration:none;">
+Entre em contato
+</a>
 </section>
-<section style="
-  width: 100%;
-  background-color: #ffffff;
-  color: #000000;
-  text-align: center;
-  padding: 20px 10px;
-  font-size: 14px;
-">
-  © 2025 HORA DA REVISÃO. Todos os direitos reservados.
-</section>
+
+<footer style="padding:20px; text-align:center; font-size:14px;">
+© 2025 HORA DA REVISÃO. Todos os direitos reservados.
+</footer>
 
 </body>
 </html>
