--- a/pacotes.html
+++ b/pacotes.html
@@ -36,10 +36,10 @@
   <div style="margin-bottom:30px; text-align:center;">
     <h3 style="color:#00cccc;">PLANO A</h3>
     <ul style="text-align:left;">
-      <li>Correção avulsa</li>
-      <li>Notas por competência</li>
-      <li>Comentários do corretor(a)</li>
-      <li>Tema livre ou solicitado</li>
+      <li>Correção avulsa;</li>
+      <li>Notas por competência;</li>
+      <li>Comentários do corretor(a);</li>
+      <li>Tema livre ou solicitado pelo docente.</li>
     </ul>
     <a href="https://wa.me/5581982411521?text=Plano%20A%20-%20Redação"
        target="_blank"
@@ -53,9 +53,10 @@
   <div style="margin-bottom:30px; text-align:center;">
     <h3 style="color:#00cccc;">PLANO B</h3>
     <ul style="text-align:left;">
-      <li>5 correções por mês</li>
-      <li>Notas por competência</li>
-      <li>Comentários do corretor(a)</li>
+      <li>5 correções por mês;</li>
+      <li>Notas por competência;</li>
+      <li>Comentários do corretor(a);</li>
+      <li>Tema livre ou solicitado pelo docente.</li>
     </ul>
     <a href="https://wa.me/5581982411521?text=Plano%20B%20-%20Redação"
        target="_blank"
@@ -70,8 +71,30 @@
     <h3 style="color:#00cccc;">PLANO C</h3>
     <ul style="text-align:left;">
       <li>15 correções por mês</li>
-      <li>Áudio do corretor(a)</li>
-      <li>Duas aulas semanais</li>
+      <li>Notas por competência;</li>
+      <li>Comentários do corretor(a);</li>
+      <li>Tema livre ou solicitado pelo docente;</li>
+      <li>Áudio explicativo;</li>
+      <li>Uma aula por semana.</li>
+    </ul>
+    <a href="https://wa.me/5581982411521?text=Plano%20C%20-%20Redação"
+       target="_blank"
+       style="display:inline-block; background:#9151b2; color:white;
+              padding:12px 30px; border-radius:30px; text-decoration:none;">
+      Comprar
+    </a>
+  </div>
+
+  <!-- PLANO D -->
+  <div style="margin-bottom:30px; text-align:center;">
+    <h3 style="color:#00cccc;">PLANO D</h3>
+    <ul style="text-align:left;">
+       <li>15 correções por mês</li>
+      <li>Notas por competência;</li>
+      <li>Comentários do corretor(a);</li>
+      <li>Tema livre ou solicitado pelo docente;</li>
+      <li>Áudio explicativo;</li>
+      <li>Duas aula por semana.</li>
     </ul>
     <a href="https://wa.me/5581982411521?text=Plano%20C%20-%20Redação"
        target="_blank"
@@ -128,3 +151,4 @@
 
 </body>
 </html>
+
