--- a/pacotes.html
+++ b/pacotes.html
@@ -89,7 +89,7 @@
   <div style="margin-bottom:30px; text-align:center;">
     <h3 style="color:#00cccc;">PLANO D</h3>
     <ul style="text-align:left;">
-       <li>15 correções por mês</li>
+       <li>20 correções por mês</li>
       <li>Notas por competência;</li>
       <li>Comentários do corretor(a);</li>
       <li>Tema livre ou solicitado pelo docente;</li>
@@ -113,11 +113,26 @@
   <h2 style="text-align:center; color:#9151b2;">AULA DE REFORÇO</h2>
 
   <div style="margin-bottom:30px; text-align:center;">
-    <h3 style="color:#00cccc;">Plano Semanal</h3>
+    <h3 style="color:#00cccc;">Plano A</h3>
     <ul style="text-align:left;">
-      <li>Aulas teóricas</li>
-      <li>Resolução de atividades</li>
-      <li>Conteúdo personalizado</li>
+      <li>Uma aula por semana;</li>
+      <li>Aula personalizada;</li>
+      <li>Resolução de atividades.</li>
+    </ul>
+    <a href="https://wa.me/5581982411521?text=Reforço%20Escolar"
+       target="_blank"
+       style="display:inline-block; background:#9151b2; color:white;
+              padding:12px 30px; border-radius:30px; text-decoration:none;">
+      Comprar
+    </a>
+  </div>
+
+  <div style="margin-bottom:30px; text-align:center;">
+    <h3 style="color:#00cccc;">Plano B</h3>
+    <ul style="text-align:left;">
+      <li>Duas aulas por semana;</li>
+      <li>Aulas personalizadas;</li>
+      <li>Resolução de atividades.</li>
     </ul>
     <a href="https://wa.me/5581982411521?text=Reforço%20Escolar"
        target="_blank"
@@ -151,4 +166,5 @@
 
 </body>
 </html>
+
 
