--- a/pacotes.html
+++ b/pacotes.html
@@ -30,10 +30,11 @@
 
 <!-- CORREÇÃO DE REDAÇÃO -->
 <section style="padding:20px;">
-  <h2 style="text-align:center; color:#9151b2;">CORREÇÃO DE REDAÇÃO – IFRN e ENEM</h2>
+  <h2 style="text-align:center; color:#9151b2;">CORREÇÃO DE REDAÇÃO  IFRN e ENEM</h2>
 
   <!-- PLANO A -->
   <div style="margin-bottom:30px; text-align:center;">
+    <img src="case-study.png" alt="Logo">
     <h3 style="color:#00cccc;">PLANO A</h3>
     <ul style="text-align:left;">
       <li>Correção avulsa;</li>
@@ -166,5 +167,6 @@
 
 </body>
 </html>
+
 
 
