--- a/pacotes.html
+++ b/pacotes.html
@@ -34,7 +34,7 @@
 
   <!-- PLANO A -->
   <div style="margin-bottom:30px; text-align:center;">
-    <img src="case-study.png" alt="Logo">
+    <img src="case-study.png" alt="Logo" height="80">
     <h3 style="color:#00cccc;">PLANO A</h3>
     <ul style="text-align:left;">
       <li>Correção avulsa;</li>
@@ -167,6 +167,7 @@
 
 </body>
 </html>
+
 
 
 
