--- a/pacotes.html
+++ b/pacotes.html
@@ -114,6 +114,7 @@
   <h2 style="text-align:center; color:#9151b2;">AULA DE REFORÇO</h2>
 
   <div style="margin-bottom:30px; text-align:center;">
+    <img src="reforço.png" alt="Logo" height="80">
     <h3 style="color:#00cccc;">Plano A</h3>
     <ul style="text-align:left;">
       <li>Uma aula por semana;</li>
@@ -149,6 +150,7 @@
 <!-- PREPARATÓRIOS -->
 <section style="text-align:center; padding:20px;">
   <h2 style="color:#9151b2;">PREPARATÓRIO IFRN</h2>
+  <img src="r.png" alt="Logo" height="80">
   <a href="https://wa.me/5581982411521?text=Preparatório%20IFRN"
      target="_blank"
      style="display:inline-block; background:#9151b2; color:white;
@@ -157,6 +159,7 @@
   </a>
 
   <h2 style="color:#9151b2; margin-top:30px;">PREPARATÓRIO ENEM</h2>
+  <img src="rl.png" alt="Logo" height="80">
   <a href="https://wa.me/5581982411521?text=Preparatório%20ENEM"
      target="_blank"
      style="display:inline-block; background:#9151b2; color:white;
@@ -167,6 +170,7 @@
 
 </body>
 </html>
+
 
 
 
