--- a/pacotes.html
+++ b/pacotes.html
@@ -114,7 +114,7 @@
   <h2 style="text-align:center; color:#9151b2;">AULA DE REFORÇO</h2>
 
   <div style="margin-bottom:30px; text-align:center;">
-    <img src="reforço.gif" alt="Logo" height="80">
+    <img src="Reforço.gif" alt="Logo" height="80">
     <h3 style="color:#00cccc;">Plano A</h3>
     <ul style="text-align:left;">
       <li>Uma aula por semana;</li>
@@ -151,6 +151,7 @@
 <section style="text-align:center; padding:20px;">
   <h2 style="color:#9151b2;">PREPARATÓRIO IFRN</h2>
   <img src="r.gif" alt="Logo" height="80">
+  <br>
   <a href="https://wa.me/5581982411521?text=Preparatório%20IFRN"
      target="_blank"
      style="display:inline-block; background:#9151b2; color:white;
@@ -171,6 +172,7 @@
 
 </body>
 </html>
+
 
 
 
