--- a/contato.html
+++ b/contato.html
@@ -1,105 +1,36 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <title>HORA DA REVISÃO</title>
-     <link rel="icon" href="book.png"> 
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-        }
-
-        header {
-            background-color: #222;
-            padding: 15px 30px;
-        }
-
-        .menu {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .logo-container {
-            display: flex;
-            align-items: center;
-            gap: 5px;
-        }
-
-        .logo img {
-            height: 40px;
-        }
-
-        .site-name {
-            color: #fff;
-            font-weight: bold;
-            text-decoration: none;
-            font-size: 16px;
-        }
-
-        .menu ul {
-            list-style: none;
-            display: flex;
-            gap: 20px;
-            margin: 0;
-            padding: 0;
-            align-items: center; /* Alinha itens verticalmente */
-        }
-
-        .menu ul li a {
-            color: #fff;
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        .menu ul li a:hover,
-        .site-name:hover {
-            color: #9151b2;
-        }
-
-        /* Estilo do botão conforme imagem enviada */
-        .btn-contato {
-            background-color: #9151b2; 
-            color: #6b4f24; /* marrom */
-            padding: 8px 16px;
-            border: none;
-            border-radius: 15px;
-            box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.15);
-            font-weight: bold;
-            cursor: pointer;
-            font-size: 14px;
-            transition: background-color 0.3s ease;
-            text-decoration: none;
-            display: inline-block;
-        }
-
-        .btn-contato:hover {
-            background-color: #00cccc;
-        }
-    </style>
+    <link rel="icon" href="book.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
 <header>
-    <nav class="menu">
-        <!-- Logo e nome à esquerda -->
-        <div class="logo-container">
-            <div class="logo">
-                <img src="book.png" alt="Logo" />
-            </div>
-            <a href="#" class="site-name">HORA DA REVISÃO</a>
+    <nav>
+        <!-- Logo e nome -->
+        <div>
+            <img src="book.png" alt="Logo" height="40">
+            <a href="#">HORA DA REVISÃO</a>
         </div>
 
-        <!-- Links à direita -->
-        <ul>
-            <li><a href="index.html">Página inicial</a></li>
-            <li><a href="pacotes.html">Pacotes de estudo</a></li>
-            <li><a href="contato.html">Contato</a></li>
-            <a href="contato.html" class="btn-contato">Entre em contato</a>
-        </ul>
+        <!-- Menu responsivo usando <details> -->
+        <details>
+            <summary>Menu ☰</summary>
+            <ul>
+                <li><a href="index.html">Página inicial</a></li>
+                <li><a href="pacotes.html">Pacotes de estudo</a></li>
+                <li><a href="contato.html">Contato</a></li>
+                <li><a href="contato.html">Entre em contato</a></li>
+            </ul>
+        </details>
     </nav>
- <script type="text/javascript" src="https://form.jotform.com/jsform/253475592618064"></script>
 </header>
+
+<!-- Formulário do Jotform -->
+<script type="text/javascript" src="https://form.jotform.com/jsform/253475592618064"></script>
+
+</body>
+</html>
