--- a/pacotes.html
+++ b/pacotes.html
@@ -97,7 +97,7 @@
       <li>Áudio explicativo;</li>
       <li>Duas aula por semana.</li>
     </ul>
-    <a href="https://wa.me/5581982411521?text=Plano%20C%20-%20Redação"
+    <a href="https://wa.me/5581982411521?text=Plano%20D%20-%20Reda%C3%A7%C3%A3o"
        target="_blank"
        style="display:inline-block; background:#9151b2; color:white;
               padding:12px 30px; border-radius:30px; text-decoration:none;">
@@ -172,6 +172,7 @@
 
 </body>
 </html>
+
 
 
 
