--- a/pacotes.html
+++ b/pacotes.html
@@ -121,7 +121,7 @@
       <li>Aula personalizada;</li>
       <li>Resolução de atividades.</li>
     </ul>
-    <a href="https://wa.me/5581982411521?text=Reforço%20Escolar"
+    <a href="https://wa.me/5581982411521?text=Plano%20A%20-%20Refor%C3%A7o%20escolar"
        target="_blank"
        style="display:inline-block; background:#9151b2; color:white;
               padding:12px 30px; border-radius:30px; text-decoration:none;">
@@ -136,7 +136,7 @@
       <li>Aulas personalizadas;</li>
       <li>Resolução de atividades.</li>
     </ul>
-    <a href="https://wa.me/5581982411521?text=Reforço%20Escolar"
+    <a href="https://wa.me/5581982411521?text=Plano%20B%20-%20Refor%C3%A7o%20escolar"
        target="_blank"
        style="display:inline-block; background:#9151b2; color:white;
               padding:12px 30px; border-radius:30px; text-decoration:none;">
@@ -172,6 +172,7 @@
 
 </body>
 </html>
+
 
 
 
