--- a/pacotes.html
+++ b/pacotes.html
@@ -71,7 +71,7 @@
   <div style="margin-bottom:30px; text-align:center;">
     <h3 style="color:#00cccc;">PLANO C</h3>
     <ul style="text-align:left;">
-      <li>15 correções por mês</li>
+      <li>15 correções por mês;</li>
       <li>Notas por competência;</li>
       <li>Comentários do corretor(a);</li>
       <li>Tema livre ou solicitado pelo docente;</li>
@@ -90,7 +90,7 @@
   <div style="margin-bottom:30px; text-align:center;">
     <h3 style="color:#00cccc;">PLANO D</h3>
     <ul style="text-align:left;">
-       <li>20 correções por mês</li>
+       <li>20 correções por mês;</li>
       <li>Notas por competência;</li>
       <li>Comentários do corretor(a);</li>
       <li>Tema livre ou solicitado pelo docente;</li>
@@ -172,6 +172,7 @@
 
 </body>
 </html>
+
 
 
 
